<next>
  - Keyboard shortcut for the mapper UI no longer leaves keys "stuck"
    in the guest to cause problems when you exit the mapper UI.
  - Fixed code mistake that caused OpenGL NB output when dosbox.conf
    specified output=opengl
  - Mapper layout fixes:
    - Shortcut buttons (on the right hand side of the UI) fixed to
      become two columns wide if the button text won't fit in one
      column.
    - Some shortcut button titles shortened.
  - Mapper UI updated to show which bindings are being activated by
    hilighting buttons in the UI.
  - Mapper UI modifier buttons indicate status through hilighting.
  - Mapper UI joystick buttons and axes now use hilighting to indicate
    that there is input from the device.
  - Mapper fix for 4-axis joysticks that may count zero buttons, and
    then crash (divide by zero) when the user pushes a button on the
    joystick device.
  - BIOS emulation now allows you to specify binary blobs to execute
    in the guest system as part of startup. One can be specified to
    execute just after CPU reset/power-on, and the other just before
    booting to the DOS shell. THE BINARY BLOBS EXECUTE IN THE GUEST
    ENVIRONMENT AND NOT AS ARBITRARY CODE ON YOUR HOST. This option
    is provided for both automated testing and for the curious who
    may want to venture into low level ASM hacking.
  - INTRO.COM fixed to accept keyboard input correctly in both
    PC-98 and IBM PC mode. You can now browse the help text properly
    in either mode.
  - DOS shell fixed to accept DOSKEY-like input in both IBM PC and
    PC-98 mode (including arrow keys, F3, tab completion, etc.)
  - DOS CON emulation now provides function keys (F1-F10) in PC-98 mode.
  - DOS CON emulation fixed to process PC-98 BIOS codes and generate
    PC-98 ANSI escapes as real hardware normally does.
  - Mapper no longer shows two sets of the shortcuts (one overlaid
    over the keyboard), registration bug fixed.