@@ -1003,6 +1003,7 @@ dongle=false
 #                            hma allow reservation: Allow TSR and application (anything other than the DOS kernel) to request control of the HMA.
 #                                                   They will not be able to request control however if the DOS kernel is configured to occupy the HMA (DOS=HIGH)
 #                           hma minimum allocation: Minimum allocation size for HMA in bytes (equivalent to /HMAMIN= parameter).
+#                                      log console: If set, log DOS CON output to the log file.
 #                                       dos in hma: Report that DOS occupies HMA (equiv. DOS=HIGH)
 #                                   hma free space: Controls the amount of free space available in HMA. This setting is not meaningful unless the
 #                                                   DOS kernel occupies HMA and the emulated DOS version is at least 5.0.
@@ -1130,6 +1131,7 @@ xms=true
 hma=true
 hma allow reservation=true
 hma minimum allocation=0
+log console=false
 dos in hma=true
 hma free space=34816
 cpm compatibility mode=auto
